--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,6 +3,9 @@
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
+  <d>
+  <strong>Author:</strong> <%= @book.author %>
+  <d><strong>Price: </strong> <%= @book.price %>
 </p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
