--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -14,6 +14,10 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title %>
+    <%= form.label :author %>
+    <%= form.text_field :author %>
+    <%= form.label :price %>
+    <%= form.number_field :price %>
   </div>
 
   <div class="actions">
