--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,7 +6,8 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th colspan="3"></th>
+      <th>Author</th>
+      <th>Price</th>
     </tr>
   </thead>
 
@@ -14,13 +15,15 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
+        <td><%= book.author %></td>
+        <td>$<%= book.price %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
-</table>
+</table>  
 
 <br>
 
