--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -28,3 +28,11 @@
 <br>
 
 <%= link_to 'New Book', new_book_path %>
+
+<br>
+
+<%= link_to 'User index', users_path %>
+
+<br>
+
+<%= link_to 'User Book index', user_books_path %>
